--- a/public/index.html
+++ b/public/index.html
@@ -1,130 +1,40 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>Socket.IO chat</title>
-    <style>
-      * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
-    </style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme-color" content="#000000">
+    <!--
+      manifest.json provides metadata used when your web app is added to the
+      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
+
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <title>React App</title>
   </head>
   <body>
-    <div>
-        <h1 class="username"></h1>
-        <h2>Talking to <span class="usernameTarget"></span></h2>
-    </div>
-    <ul id="messages" style="width:500px"></ul>
-    <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
-    </form>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
-    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-    <script>
-        $(function () {
-            var socket = io();
-            $('form').submit(function(e){
-                e.preventDefault()
-                var message = $('#m').val();
-                console.log('message ', message)
-                //trim the whitepasce
-                message = message.trim()
-                // check if it's action
-                if (message.startsWith('/')) {
-                    emitAction(message)
-                } else {
-                    // it's a simple message
-                    socket.emit('message', message)
-                    $('#messages').append($("<li style=text-align:left class=sent>").text(message));
-                }
-                //reset the input
-                $('#m').val('');
-            });
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
 
-            $('#m').on("keypress", function(ev) {
-                socket.emit('typing')
-            })
-            
-            function emitAction(rawMessage) {
-                var re = /(\/\S*)(.*)/g
-                var matches = re.exec(rawMessage)
-                var action = matches[1]
-                switch (action) {
-                    case '/nick':
-                        var nick = matches[2]
-                        socket.emit('change nick', nick)
-                        break;
-                    case '/think':
-                        var message = matches[2]
-                        socket.emit('think message', message)
-                        break;
-                    case '/oops':
-                        // removes the last message sent
-                        $('.sent:last-child').remove()
-                        socket.emit('removing message')
-                        break;
-                    case '/fadelast​':
-                        socket.emit('fadelast​')
-                        break;
-                    case '/highlight':
-                        var message = matches[2]
-                        socket.emit('highlight​', message)
-                        break;
-                    case '/countdown​':
-                        //@ need to check if its a number
-                        //@ need to check if its a proper URL
-                        console.log('the machtes are ', matches[2])
-                        var elements = matches[2].trim().split(' ')
-                        var data = {
-                            number: elements[0],
-                            url: elements[1]
-                        }
-                        socket.emit('countdown​', data)
-                        break;
-                    default:
-                        console.log('that action isnt possible')
-                        break;
-                }
-            }
-            // socket listeners
-            socket.on('message', function(msg){
-                $('#messages').append($("<li style=text-align:right class=received>").text(msg));
-            });
-            socket.on('change nick', function(msg) {
-                console.log('changed nicjed, ',msg)
-                $('.usernameTarget').text(msg)
-            });
-            socket.on('nick', function(msg) {
-                $('.username').text(msg)
-            });
-            socket.on('think message', function(msg){
-                console.log('think message', msg)
-                $('#messages').append($("<li style='color:grey'>").text(msg));
-            });
-            socket.on('removing message', function(msg){
-                console.log('removing message', msg),
-                $('.received:last-child').remove()
-            });
-            socket.on('fadelast​', function(msg){
-                $('#messages li').last().css({opacity: 0.1})
-            });
-            socket.on('highlight​', function(msg){
-                $('#messages').append($("<li style='font-size: 110%;filter: brightness(90%);'>").text(msg));
-            });
-            socket.on('countdown​', function(data){
-                setTimeout(function(){
-                    window.open(data.url) 
-                }, data.number * 1000);
-            });
-            socket.on('typing', function(data) {
-                console.log('TYPING USER USER')
-            })
-        });
-    </script>
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
+
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
   </body>
 </html>
-    
